discussion/kv_engine/154545/154545_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: wip

Need to fix the shared_ptr vs weak_ptr in the registry/ownership
stuff.

Change-Id: I81db06c75f63e8c0f56f410fc24c716549bbabc6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-27 16:02:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 16:23:05.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30874/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/third_party/spdlog_new/include/spdlog/fmt/fmt.h:25:10:
fatal error: "fmt/core.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9233/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9233/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9233/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36152/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\third_party\spdlog_new\include\spdlog/fmt/fmt.h(25): fatal error C1083: Cannot open include file: "fmt/core.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36152/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18762/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9861/ : FAILURE

Compile error at [2021-05-27T16:12:44.500Z] ../third_party/spdlog_new/include/spdlog/fmt/fmt.h:25:10:
fatal error: "fmt/core.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9861/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10793/ : FAILURE

Compile error at [2021-05-27T16:18:41.038Z] ../third_party/spdlog_new/include/spdlog/fmt/fmt.h:25:10:
fatal error: fmt/core.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11197/ : FAILURE

Compile error at [2021-05-27T16:19:06.958Z] ../third_party/spdlog_new/include/spdlog/fmt/fmt.h:25:10:
fatal error: "fmt/core.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10937/ : FAILURE

Compile error at [2021-05-27T16:17:52.656Z] ../third_party/spdlog_new/include/spdlog/fmt/fmt.h:25:10:
fatal error: fmt/core.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10937/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7813/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 19:31:52.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9245/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9245/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9245/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30880/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7819/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18773/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9867/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10799/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11207/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10943/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
